# goodcup-roast-intelligence-demo

./: .gitignore  CLAUDE.md  DESIGN.md  PRD.md  PRODUCT.md  README.md  config.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/samples/: sample_artisan_R-2026-001.alog  sample_artisan_R-2026-002.alog  sample_cropster_R-2026-003.csv  sample_cupping_SES-2026-02.csv
docs/: LANDSCAPE.md
src/goodcup/: __init__.py  cli.py
src/goodcup/ai/: __init__.py  claude.py  gemini.py  grounding.py  mock.py  provider.py
src/goodcup/analysis/: __init__.py  calibration.py  correlation.py  descriptors.py  lot_history.py  monitoring.py  roast_metrics.py
src/goodcup/dashboard/: __init__.py  app.py  experiment_demo.py
src/goodcup/db/: __init__.py  models.py  schema.sql
src/goodcup/ingest/: __init__.py  artisan.py  common.py  cropster.py  manual_csv.py
src/goodcup/knowledge/: __init__.py  brew_sheet.py
src/goodcup/recommend/: __init__.py  similarity.py
src/goodcup/reference/: flavor_wheel.json
src/goodcup/research/: __init__.py  literature.py
src/goodcup/seed/: __init__.py  generate.py  synthetic_files.py
templates/: cupping_entry.csv  green_intake.csv  roast_manual.csv
tests/: conftest.py  test_ai_gemini.py  test_ai_grounding.py  test_ai_mock.py  test_brew_sheet.py  test_descriptors.py  test_experiment_demo.py  test_experiments.py  test_ingest_artisan.py  test_ingest_cropster.py  test_ingest_manual.py  test_literature.py  test_lot_history.py  test_monitoring.py  test_partial_association.py  test_roast_metrics.py  test_schema.py  test_similarity.py
